<resources>
    <string name="app_name">groupProject</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sex">Sex:</string>
    <string name="age">Age:</string>
    <string name="height">Height(cm):</string>
    <string name="weight">Weight(kg):</string>
    <string name="apply">Apply</string>
    <string name="ageWarning">Age cannot be empty</string>
    <string name="heightWarning">Height cannot be empty</string>
    <string name="weightWarning">Weight cannot be empty</string>
    <string name="nightMode">Night Mode:</string>
    <string name="storage">Storage:</string>
    <string name="deleteReport">Delete past reports?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sleep">Sleep now</string>
    <string name="get_up">Get up now</string>
    <string name="get_up_warning">Are you sure to get up now?</string>
    <string name="get_up_yes">Yes</string>
    <string name="get_up_no">No</string>
    <string name="email"><u>xiaopenli4-c@my.cityu.edu.cn</u></string>
    >
    <string name="mail_subject">Feed back about the App</string>
    <string name="mail_content">If you have any suggestion or find any bug, please tell me for improvement. Thank you!</string>

    <string-array name="SecurityQuestion">
        <item>My phone number</item>
        <item>My student ID</item>
        <item>My hometown</item>
        <item>My birthday</item>
    </string-array>

    <string-array name="soundList">
        <item>Innocence</item>
        <item>fake real</item>
        <item>Love Confession</item>
        <item>最佳损友</item>
        <item>西游记序曲</item>
        <item>通天大道</item>
    </string-array>

    <string-array name="wakeRange">
        <item>10min</item>
        <item>20min</item>
        <item>30min</item>
        <item>40min</item>
        <item>50min</item>
        <item>60min</item>
    </string-array>

    <string-array name="musicDuration">
        <item>10min</item>
        <item>20min</item>
        <item>30min</item>
        <item>40min</item>
        <item>50min</item>
        <item>60min</item>
    </string-array>
    <string-array name="musicList">
        <item>childhood</item>
        <item>dream of snow</item>
        <item>happy</item>
        <item>kiss the rain</item>
        <item>morning</item>
        <item>painoking</item>
    </string-array>
    <string-array name="ageTips">
        <item>You do not input your age, no tips for you.</item>
        <item>Sleep time for You should not be less than 12 hours.</item>
        <item>You should go to bed around 8 and sleep for 10 hours.</item>
        <item>You need to sleep 8 hours a day and follow the principle of early bed and early morning.</item>
        <item>You need a 7-hour sleep, and they should guarantee a “high quality sleep time” from 10pm to 5am. Because people can easily reach deep sleep at this time, it helps relieve fatigue.</item>
        <item>You should sleep before 12 every night. Sleep time should not exceed 7 hours and not less than 5.5 hours.</item>
    </string-array>
</resources>
